---------------------------------------------------------------------------------------------------
Version: 1.11.0
Date: 2021.09.13
  Changes:
    - 9 new button styles
    - 1 new frame type
    - Supports Nullius
    - Supports NewGame+
    - Supports Inserter Throughput
    - 4 icon changes
---------------------------------------------------------------------------------------------------
Version: 1.10.4
Date: 2021.09.08
  Changes:
    - Supports Schall Endgame Evolution (keeps roman numerals, adds icon that gets redder when evolving)
    - Fixed visual bug with LTN Manager
---------------------------------------------------------------------------------------------------
Version: 1.10.3
Date: 2021.09.06
  Changes:
    - Fixed FJEI still displaying old icon
    - Fixed Frame option not applying on first try
---------------------------------------------------------------------------------------------------
Version: 1.10.2
Date: 2021.09.06
  Changes:
    - Supports Advanced Logistics System Fork
    - Supports Zoom (fixed + re-published abandoned mod)
    - Supports Production Statistics Monitor HUD
    - Supports Teleportation_Redux
    - Supports PersonalTeleporter
---------------------------------------------------------------------------------------------------
Version: 1.10.1
Date: 2021.09.05
  Changes:
    - Added option for removing or simplifying top frame
    - Supports Pyanodon
    - Supports Homeworld Redux
    - Supports Lawful Evil (Added custom scripts in laws)
    - Supports Trashcan
    - Supports Usage Detector
    - Supports RPG
    - Supports Spawn Control
    - Supports Spawn Control with cooldown
    - Supports What Is Missing
---------------------------------------------------------------------------------------------------
Version: 1.10.0
Date: 2021.09.03
  Changes:
    - Supports FJEI
    - Supports ToggleSpeedBoost
    - Supports 248k Mod
    - Supports Blueprint Alignment
    - Supports Cargo Train Manager
    - Supports Clusterio