@@ -61,6 +61,9 @@ productionmonitor_button=Production Statistics Monitor: \n[[font=default-semibol
 teleportation_redux_button=Teleporter Manager
 inserterthroughput_on_button=Display inserter throughput on hover\nCurrent: [font=default-semibold][color=128, 206, 240]ON[/color][/font]
 inserterthroughput_off_button=Display inserter throughput on hover\nCurrent: [font=default-semibold][color=128, 206, 240]OFF[/color][/font]
+yarm_all_button=YARM Resource Monitor\nCurrent Mode: [font=default-semibold][color=128, 206, 240]FULL TABLE[/color][/font]
+yarm_none_button=YARM Resource Monitor\nCurrent Mode: [font=default-semibold][color=128, 206, 240]HIDDEN[/color][/font]
+yarm_warnings_button=YARM Resource Monitor\nCurrent Mode: [font=default-semibold][color=128, 206, 240]WARNINGS ONLY[/color][/font]
 
 [mod-setting-name]
 gu_frame_style_setting=Top frame style
