@@ -61,6 +61,9 @@ productionmonitor_button=Moniteur de Production: \n[[font=default-semibold][colo
 teleportation_redux_button=Gestionnaire de Téléporteurs
 inserterthroughput_on_button=Montre le débit des inserteurs au vol de la souris\nActuellement: [font=default-semibold][color=128, 206, 240]ON[/color][/font]
 inserterthroughput_off_button=Montre le débit des inserteurs au vol de la souris\nActuellement: [font=default-semibold][color=128, 206, 240]OFF[/color][/font]
+yarm_all_button=YARM Monitor de ressources\nMode actuel: [font=default-semibold][color=128, 206, 240]TABLE AFFICHÉE[/color][/font]
+yarm_none_button=YARM Monitor de ressources\nMode actuel: [font=default-semibold][color=128, 206, 240]CACHÉ[/color][/font]
+yarm_warnings_button=YARM Monitor de ressources\nMode actuel: [font=default-semibold][color=128, 206, 240]ALERTES UNIQUEMENT[/color][/font]
 
 [mod-setting-name]
 gu_frame_style_setting=Style de la fenêtre de boutons (haut-gauche)
